# jeopardy-notifier

./: .dockerignore  .gitignore  AGENT.md  DEPLOYMENT.md  DEVELOPMENT.md  Dockerfile  LICENSE  README.md  TESTING.md  example-email.eml  example-report.xlsx  example-roster.xlsx  manage.py  pyproject.toml  sample-env.local
core/: forms.py  tests.py  urls.py  views.py
core/services/: email.py  parser.py  ranking.py  turnstile.py
core/templates/core/: confirmation.html  upload.html  verification.html
core/templates/core/widgets/: turnstile.html
jeopardy_notifier/: asgi.py  settings.py  urls.py  wsgi.py
