[project]
name = "jeopardy-notifier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asgiref==3.11.1",
    "certifi==2026.2.25",
    "charset-normalizer==3.4.6",
    "django==6.0.3",
    "django-turnstile==0.1.3",
    "et-xmlfile==2.0.0",
    "idna==3.11",
    "numpy==2.4.3",
    "openpyxl==3.1.5",
    "pandas==3.0.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.2",
    "requests==2.33.0",
    "six==1.17.0",
    "sqlparse==0.5.5",
    "urllib3==2.6.3",
]
